feat: advance DMN TCK conformance